# payday-planner

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
.streamlit/: config.toml
src/payday_planner/: app.py  cli.py  engine.py  models.py
tests/: test_payday.py
