[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "payday-planner"
version = "0.1.0"
description = "Local-first cashflow planning app"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rafael Vasquez" }]
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.6",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "platformdirs>=4.0.0",
    "streamlit>=1.55.0",
]

[project.scripts]
payday = "payday_planner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/payday_planner"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
